@@ -1437,9 +1437,9 @@ the Emacs manual) to set this variable permanently for each file."
 		 (string :format "%v")))
 (make-variable-buffer-local 'TeX-master)
 (put 'TeX-master 'safe-local-variable
-     (lambda (x)
-       (or (stringp x)
-	   (member x (quote (t nil shared dwim))))))
+     '(lambda (x)
+	(or (stringp x)
+	    (member x (quote (t nil shared dwim))))))
 
 (defvar TeX-convert-master t
   "*If not nil, automatically convert ``Master:'' lines to file variables.
