@@ -1,3 +1,8 @@
+2006-05-10  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* tex.el (TeX-master): Quote safe-local-variable lambda expression
+	to avoid byte compilation.
+
 2006-05-08  Reiner Steib  <Reiner.Steib@gmx.de>
 
 	* font-latex.el (font-latex-fontify-script): Mark as
